project/test/semantics/unit/good/Good06_shouldAllowComplexObjectsAsAttributes.ty
mutable class Student {
    
    values: {
        name: String;
        id: Int = 38493;
        grades: Grades;
    }
    
    variables: {
        age: Int;
        year: Int;
    }
}

immutable class Grades {
    
    values: {
        grade1: Int;
        grade2: Int;
        grade3: Int = 13;
        grade4: Int;
    }
    
    functions: {
        someFunction: () -> Int = {
            3 + 3
        }
    }
}

singleton class ObjectsAsValues {
    
    actions: {
        main: () -> Student = {
            val student: Student = Student("Diana Frost", Grades(11, 12, 14), 20, 2);
            student
        }
    }
}
