project/test/semantics/unit/bad/Bad07_shouldThrowObjectNotInScopeError.ty
mutable class SomeMutableClass {

    values: {
        value1: Int = 1;
        value2: String;
        value3: Char = 'c';
        value4: Int = 7;
        value5: String = "Okay";
        value6: String = value0;
    }
    
    variables: {
        variable1: Int = 3;
        variable2: String = "OK";
        variable3: Int = 7;
    }
    
    functions: {
        someFunction: () -> Int = 339
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
